# atlas-terminal

./: .gitignore  AtlasTerminalPRD.md  AtlasTerminalPRDjugaad.md  README.md  jugaad_data_docs.md  pyproject.toml
atlas_terminal/: __init__.py  main.py
atlas_terminal/core/: __init__.py  app.py  command_bar.py  link_group_manager.py  main_window.py  panel_system.py
atlas_terminal/data/: __init__.py  data_manager.py  price_data.py
atlas_terminal/modules/: __init__.py
atlas_terminal/resources/: __init__.py
atlas_terminal/utils/: __init__.py
